[gd_scene load_steps=18 format=2]

[ext_resource path="res://shaders/blur.shader" type="Shader" id=1]
[ext_resource path="res://ui/level_complete_overlay/sprites/star_x2.png" type="Texture" id=2]
[ext_resource path="res://ui/level_complete_overlay/scripts/level_complete_overlay.gd" type="Script" id=3]
[ext_resource path="res://ui/level_complete_overlay/audio/confirmation_002.wav" type="AudioStream" id=4]
[ext_resource path="res://ui/level_complete_overlay/audio/confirmation_004.wav" type="AudioStream" id=5]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )
shader_param/blur_amount = 2.5

[sub_resource type="DynamicFontData" id=2]
font_path = "res://fonts/kenney_blocks.ttf"

[sub_resource type="DynamicFont" id=3]
size = 96
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://fonts/kenney_future.ttf"

[sub_resource type="DynamicFont" id=5]
size = 33
font_data = SubResource( 4 )

[sub_resource type="Animation" id=6]
resource_name = "CompleteLevel"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "load_next_level"
} ]
}

[sub_resource type="Animation" id=7]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/VBoxContainer/MarginContainer/InputLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/VBoxContainer/HBoxContainer/StarOne/Texture:rect_min_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 120, 120 ), Vector2( 100, 100 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterContainer/VBoxContainer/HBoxContainer/StarOne/Texture:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.501961 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer/VBoxContainer/HBoxContainer/StarTwo/Texture:rect_min_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.35, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 120, 120 ), Vector2( 100, 100 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CenterContainer/VBoxContainer/HBoxContainer/StarTwo/Texture:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.501961 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CenterContainer/VBoxContainer/HBoxContainer/StarThree/Texture:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.2, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.501961 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CenterContainer/VBoxContainer/HBoxContainer/StarThree/Texture:rect_min_size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.2, 0.45, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 120, 120 ), Vector2( 100, 100 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/VBoxContainer/HBoxContainer/StarOne/Texture:rect_min_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 120, 120 ), Vector2( 100, 100 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterContainer/VBoxContainer/HBoxContainer/StarOne/Texture:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.917647, 1, 0.572549, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer/VBoxContainer/HBoxContainer/StarTwo/Texture:rect_min_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.35, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 120, 120 ), Vector2( 100, 100 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CenterContainer/VBoxContainer/HBoxContainer/StarTwo/Texture:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.501961 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CenterContainer/VBoxContainer/HBoxContainer/StarThree/Texture:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.2, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.501961 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CenterContainer/VBoxContainer/HBoxContainer/StarThree/Texture:rect_min_size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.2, 0.45, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 120, 120 ), Vector2( 100, 100 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/VBoxContainer/HBoxContainer/StarOne/Texture:rect_min_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 120, 120 ), Vector2( 100, 100 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterContainer/VBoxContainer/HBoxContainer/StarOne/Texture:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.917647, 1, 0.572549, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer/VBoxContainer/HBoxContainer/StarTwo/Texture:rect_min_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.35, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 120, 120 ), Vector2( 100, 100 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CenterContainer/VBoxContainer/HBoxContainer/StarTwo/Texture:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.917647, 1, 0.572549, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CenterContainer/VBoxContainer/HBoxContainer/StarThree/Texture:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.2, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.917647, 1, 0.572549, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CenterContainer/VBoxContainer/HBoxContainer/StarThree/Texture:rect_min_size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.2, 0.45, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 120, 120 ), Vector2( 100, 100 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/VBoxContainer/HBoxContainer/StarOne/Texture:rect_min_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 120, 120 ), Vector2( 100, 100 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterContainer/VBoxContainer/HBoxContainer/StarOne/Texture:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.917647, 1, 0.572549, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer/VBoxContainer/HBoxContainer/StarTwo/Texture:rect_min_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.35, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 120, 120 ), Vector2( 100, 100 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CenterContainer/VBoxContainer/HBoxContainer/StarTwo/Texture:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.917647, 1, 0.572549, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CenterContainer/VBoxContainer/HBoxContainer/StarThree/Texture:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.2, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.501961 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CenterContainer/VBoxContainer/HBoxContainer/StarThree/Texture:rect_min_size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.2, 0.45, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 120, 120 ), Vector2( 100, 100 ) ]
}

[node name="LevelCompleteOverlay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackDrop" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blur" type="ColorRect" parent="."]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.337255 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 468.0
margin_top = 361.0
margin_right = 1452.0
margin_bottom = 718.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 984.0
margin_bottom = 144.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
text = "LEVEL COMPLETE"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 164.0
margin_right = 984.0
margin_bottom = 284.0
alignment = 1

[node name="StarOne" type="CenterContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 308.0
margin_right = 428.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture" type="TextureRect" parent="CenterContainer/VBoxContainer/HBoxContainer/StarOne"]
modulate = Color( 1, 1, 1, 0.501961 )
margin_left = 10.0
margin_top = 10.0
margin_right = 110.0
margin_bottom = 110.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 50, 50 )
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarTwo" type="CenterContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 432.0
margin_right = 552.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture" type="TextureRect" parent="CenterContainer/VBoxContainer/HBoxContainer/StarTwo"]
modulate = Color( 1, 1, 1, 0.501961 )
margin_left = 10.0
margin_top = 10.0
margin_right = 110.0
margin_bottom = 110.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 50, 50 )
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarThree" type="CenterContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 556.0
margin_right = 676.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture" type="TextureRect" parent="CenterContainer/VBoxContainer/HBoxContainer/StarThree"]
modulate = Color( 1, 1, 1, 0.501961 )
margin_left = 10.0
margin_top = 10.0
margin_right = 110.0
margin_bottom = 110.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 50, 50 )
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 304.0
margin_right = 984.0
margin_bottom = 357.0
custom_constants/margin_top = 15

[node name="InputLabel" type="Label" parent="CenterContainer/VBoxContainer/MarginContainer"]
margin_top = 15.0
margin_right = 984.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 5 )
text = "PRESS ANY KEY TO CONTINUE"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/CompleteLevel = SubResource( 6 )
anims/FadeIn = SubResource( 7 )
anims/FadeInInput = SubResource( 8 )
anims/NoStars = SubResource( 9 )
anims/OneStar = SubResource( 10 )
anims/ThreeStar = SubResource( 11 )
anims/TwoStar = SubResource( 12 )

[node name="InAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="OutAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
